# SDLImGuiTriangle

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: BuildDontRunWithCMakePresets.yml  BuildDontRunWithoutCMakePresets.yml
CMakeUtils/FindOrFetch/: DownloadExternalProjectFiles.cmake  FindOrFetchSDL2.cmake
CMakeUtils/Handy/: DisallowInSourceBuilds.cmake  DisplayGenericInfo.cmake
CMakeUtils/Presets/: BuildType.json  Compilers.json  Platforms.json  SingleConfigGenerators.json
SDLImGui/: CMakeLists.txt
SDLImGui/hdr/: ImGuiFonts.hpp  ImGuiFrame.hpp  ImGuiView.hpp  OpenGLContext.hpp  SDLWindow.hpp
SDLImGui/src/: ImGuiFonts.cpp  ImGuiFrame.cpp  ImGuiView.cpp  MainSDLImGui.cpp  OpenGLContext.cpp  SDLWindow.cpp
